--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/fragment_transactions"
-        android:icon="@drawable/ic_transactions"
-        android:title="Transactions" />
-    <item
-        android:id="@+id/fragment_report"
-        android:icon="@drawable/ic_chart"
-        android:title="Reports" />
-    <item
-        android:id="@+id/fragment_dashboard"
+        android:id="@+id/nav_dashboard"
         android:icon="@drawable/ic_dashboard"
-        android:title="Home" />
+        android:title="Dashboard" />
+
     <item
-        android:id="@+id/fragment_goals"
+        android:id="@+id/nav_transactions"
+        android:icon="@drawable/ic_transactions" 
+        android:title="Transactions" />
+
+    <item
+        android:id="@+id/nav_goals"
         android:icon="@drawable/ic_goals"
         android:title="Goals" />
+
     <item
-        android:id="@+id/fragment_settings"
+        android:id="@+id/nav_reports"
+        android:icon="@drawable/ic_reports"
+        android:title="Reports" />
+
+    <item
+        android:id="@+id/nav_settings"
         android:icon="@drawable/ic_settings"
         android:title="Settings" />
 </menu>
