--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,11 +24,11 @@
     <color name="success_green">#FF4CAF50</color>
     <color name="success_green_light">#BDE2C1</color>
     <color name="error_red">#FFD32F2F</color>
-    <color name="expense_red">#FFD32F2F</color>
+    <color name="expense_red">#F44336</color>
     <color name="error_red_light">#FFEF9A9A</color>
     <color name="warning_yellow">#FFFFC107</color>
     <color name="green_income">#00E676</color>
-    <color name="income_green">#00E676</color>
+    <color name="income_green">#4CAF50</color>
     <color name="red_expense">#FF1744</color>
     <color name="colorPrimary">#3D5AFE</color>
     <color name="primary_color">#3D5AFE</color>
@@ -37,5 +37,11 @@
 
     <color name="colorPrimaryDark">#6E71A8</color>
 
-
+    <color name="primary">#1976D2</color>
+    <color name="primary_dark">#1565C0</color>
+    <color name="secondary">#FFC107</color>
+    <color name="secondary_dark">#FFA000</color>
+    <color name="gray_light">#E0E0E0</color>
+    <color name="gray">#9E9E9E</color>
+    <color name="gray_dark">#616161</color>
 </resources>
